--- a/css/sass/base/_config.scss
+++ b/css/sass/base/_config.scss
@@ -41,9 +41,9 @@ $light-salmon: #f56d6f;
 $light-red: #FF4533;
 
 /* chatbot blue colors */
-$chatbot-primary: #749CD1;
-$chatbot-blue01: #50659C;
-$chatbot-blue02: #688DBD;
+$chatbot-primary: #0398DC;
+$chatbot-secondary: #1477AF;
+$chatbot-third: #1D364C;
 $chatbot-red: #FF7668;
 
 html {
