--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -109,13 +109,10 @@
 }
 
 
-/* PROTOTYPE LANDING
-   ========================================================================== */
-
 /**
  * MOBILE FIRST QUERIES
  */
-
+.c-background-icon,
 .p-background-icon,
 .ui-background-icon,
 .design-background-icon {
@@ -129,6 +126,8 @@
 	}
 }
 
+/* PROTOTYPE LANDING
+   ========================================================================== */
 
 .prototype-container {
 	background: $salmon;
@@ -180,6 +179,53 @@
 		}
 	}
 
+}
+
+/* USER INTERFACE / CHATBOT
+   ========================================================================== */
+
+
+.chatbot {
+	background: $light-salmon;
+	h1 {
+		font-size: 2.4em
+	}
+	p {
+		color: $reverse;
+		margin-bottom: 15px;
+	}
+	.ui-chatbot {
+		.prototype-mockup {
+			img {
+			width: 400px;
+			display: none;
+			}
+		}
+	}
+
+}
+
+@media screen and (min-width: 750px) {
+	.chatbot-background-icon {
+		img {
+			width: 500px;
+		}
+	}
+
+	.chatbot-container {
+		h1 {
+		font-size: 3em;
+		}
+	}
+	.chatbot {
+		.chatbot-container {
+			.prototype-mockup {
+				img {
+				display: inherit;
+				}
+			}
+		}
+	}
 }
 
 /* USER INTERFACE
