--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -122,7 +122,7 @@
 	transform: translate(-50%, -50%);
 	img {
 		opacity: 0.08;
-		width: 300px;
+		width: 600px;
 	}
 }
 
@@ -186,7 +186,7 @@
 
 
 .chatbot {
-	background: $light-salmon;
+	background: $chatbot-primary;
 	h1 {
 		font-size: 2.4em
 	}
@@ -194,14 +194,14 @@
 		color: $reverse;
 		margin-bottom: 15px;
 	}
-	.ui-chatbot {
-		.prototype-mockup {
+
+		.chatbot-mockup {
 			img {
-			width: 400px;
+			width: 350px;
 			display: none;
 			}
 		}
-	}
+
 
 }
 
@@ -219,7 +219,7 @@
 	}
 	.chatbot {
 		.chatbot-container {
-			.prototype-mockup {
+			.chatbot-mockup {
 				img {
 				display: inherit;
 				}
