--- a/css/sass/pages/_chatbot.scss
+++ b/css/sass/pages/_chatbot.scss
@@ -148,7 +148,7 @@
         line-height: 50px;
         text-align: center;
         text-transform: uppercase;
-        font-size: 1em;
+        font-size: .9em;
         color: $chatbot-third;
       }
       a {
@@ -157,6 +157,7 @@
     }
   }
 }
+
 
 /**
  * LARGER THAN TABLET
