--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -37,6 +37,15 @@
 			color: $salmon;
 		}
 	}
+
+	.down-arrow {
+		position: absolute;
+		top: 50%;
+		left: 1%;
+		transform: translateY(-50%);
+		width: 10px;
+
+	}
 }
 
 
