--- a/css/main.css
+++ b/css/main.css
@@ -1158,7 +1158,8 @@ a:hover, a:focus {
   left: 1%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  width: 10px; }
+  width: 10px;
+  opacity: 0.15; }
 
 /* Larger than phablet */
 @media (min-width: 550px) {
