--- a/css/sass/components/_nav.scss
+++ b/css/sass/components/_nav.scss
@@ -231,6 +231,7 @@
 		font-size: 14px;
 		float: left;
 		border: 1px solid rgba(233,68, 68, 0.15);
+		border-right: 0px;
 		i {
 		height: 35px;
 		width: 35px;
@@ -238,10 +239,8 @@
 		line-height: 35px;
 		}
 	}
-	li:nth-of-type(1),
-	li:nth-of-type(2),
-	li:nth-of-type(3) {
-		border-right: 0px;
+	li:last-of-type {
+		border-right: 1px solid rgba(233,68, 68, 0.15);
 	}
 	li:hover {
 		background: $salmon;
