--- a/css/sass/base/_config.scss
+++ b/css/sass/base/_config.scss
@@ -41,11 +41,12 @@ $light-salmon: #f56d6f;
 $light-red: #FF4533;
 
 /* chatbot blue colors */
-$chatbot-primary: #0398DC;
+// $chatbot-primary: #0398DC;
+$chatbot-primary: #53657f;
 $chatbot-secondary: #1477AF;
 $chatbot-third: #1D364C;
 $chatbot-red: #FF7668;
-
+$chatbot-pink: #e85998;
 html {
 	background: $aqua-blue;
 }
