--- a/css/sass/pages/_chatbot.scss
+++ b/css/sass/pages/_chatbot.scss
@@ -142,14 +142,14 @@
       margin: 20 auto 0;
       width: 80%;
       height: 50px;
-      background: #f29312;
+      background: $chatbot-pink;
       border-radius: 4px;
       h4 {
         line-height: 50px;
         text-align: center;
         text-transform: uppercase;
         font-size: .9em;
-        color: $chatbot-third;
+        color: $reverse;
       }
       a {
         text-decoration: none;
