--- a/css/sass/components/_nav.scss
+++ b/css/sass/components/_nav.scss
@@ -4,8 +4,8 @@
 
 .logo {
 	position: fixed;
-	top: 4%;
-	left: 4%;
+	top: 3.5%;
+	left: 6%;
 	z-index: 25;
 	margin: 0;
 	width: 110px;
@@ -22,33 +22,22 @@
 
 
 /**
- * HAMBURGER TOGGLE MENU
+ *  TOGGLE MENU RIGHT HAND CORNER
  */
 
 .navbar-toggle {
 	position: fixed;
-	top: 4%;
-	right: 4%;
-	z-index: 20;
+	top: 3%;
+	right: 6%;
+	z-index: 500;
 	cursor: pointer;
 
-	#menu {
-  width:50px;
-	}
-
-.hamburger-container {
-		width: 40px;
-		height: 20px;
-		overflow: hidden;
-
-
-		.menu-bar {
-		  background: $salmon;
-		  width: 40px;
-		  height: 2px;
-	 	 	margin-bottom: 6px;
-	 	 	transform: translateX(10px)
-		}
+	.my-work {
+		color: $reverse;
+		font-size: 12px;
+		text-transform: uppercase;
+		padding: 3px 18px;
+		border: 1px solid $reverse;
 	}
 }
 
@@ -72,7 +61,7 @@
 
 .fp-nav-wrapper {
 	position: fixed;
-	z-index: 200;
+	z-index: 1000;
 	background: #072231;
 	width: 100vw;
 	height: 100vh;
@@ -201,6 +190,18 @@
 
 }
 
+@media (min-width: 560px){
+	.logo {
+		top: 3.5%;
+		left: 2%;
+	}
+
+	.navbar-toggle {
+		top: 3%;
+		right: 2%;
+	}
+}
+
 @media (min-width: 750px){
 	.nav-about-text {
 		h2 {
@@ -224,7 +225,7 @@
 .social-main {
 	z-index: 100;
 	position: absolute;
-	right: 4%;
+	right: 2%;
 	bottom: 4%;
 	li {
 		list-style-type: none;
@@ -268,7 +269,7 @@
 .location-caption {
 	z-index: 100;
 	position: absolute;
-	left: 4%;
+	left: 2%;
 	bottom: 4%;
 	height: 35px;
 	line-height: 35px;
