--- a/css/sass/components/_nav.scss
+++ b/css/sass/components/_nav.scss
@@ -38,22 +38,19 @@
 		text-transform: uppercase;
 		padding: 3px 18px;
 		border: 1px solid $reverse;
+		font-family: $bold;
 	}
 }
 
 /**
  * SECONDARY NAVIGATION
  */
-
-
-
 .secondary-nav {
 	background: $aqua-blue;
 	width: 100%;
 	height: 100px;
 	position: fixed;
 }
-
 
 /**
  * FULL PAGE NAVIGATION
@@ -76,8 +73,6 @@
 		color: $reverse;
 	}
 }
-
-
 
 .nav-menu-content {
 	font-family: $black;
