--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -19,7 +19,7 @@
 
 	.landing-header {
 		h1, p {
-		color: $reverse;
+		color: $salmon;
 		}
 		h1 {
 			text-transform: initial;
@@ -132,7 +132,7 @@
 	transform: translate(-50%, -50%);
 	img {
 		opacity: 0.08;
-		width: 600px;
+		width: 300px;
 	}
 }
 
@@ -150,11 +150,10 @@
 	}
 	.prototype-mockup {
 		img {
-			width: 80%;
+			width: 250px;
 			display: none;
 		}
 	}
-
 }
 
 
@@ -175,12 +174,8 @@
 		font-size: 3em;
 		}
 		article {
-			width: 70%;
+			width: 60%;
 			text-align: left;
-		}
-		h3 {
-			font-size: 2em;
-			margin-bottom: 10px;
 		}
 		.prototype-mockup {
 			img {
@@ -212,16 +207,14 @@
 			}
 		}
 
-
 }
 
 @media screen and (min-width: 750px) {
-	.chatbot-background-icon {
+	#chatbot-background-icon {
 		img {
-			width: 500px;
+			width: 600px;
 		}
 	}
-
 	.chatbot-container {
 		h1 {
 		font-size: 3em;
@@ -285,7 +278,7 @@
 	}
 }
 
-/* RESUME SECTION
+/* GRAPHIC SECTION
    ========================================================================== */
 
 .graphic-design {
@@ -313,4 +306,21 @@
 			width: 500px;
 		}
 	}
+}
+
+/* case study type above pulsing circles */
+.case-study-type {
+ position: absolute;
+ top: 83%;
+ left: 50%;
+ transform: translate(-50%, -50%);
+ span {
+	 color: $salmon;
+	 text-transform: uppercase;
+	 font-size: 14px;
+	 font-family: $bold;
+ }
+ a {
+	 text-decoration: none;
+ }
 }
