remove scripts from home page

--- a/css/main.css
+++ b/css/main.css
@@ -1147,8 +1147,7 @@ html.fp-enabled,
   left: 1%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  width: 10px;
-  opacity: 0.15; }
+  width: 10px; }
 
 /* Larger than phablet */
 @media (min-width: 550px) {
